--- a/Obligaciones.Tests/Obligaciones.Tests.csproj
+++ b/Obligaciones.Tests/Obligaciones.Tests.csproj
@@ -36,6 +36,9 @@
     <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Rhino.Mocks">
+      <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -52,6 +55,7 @@
     <Compile Include="Controllers\TaxPayerControllerTests.cs" />
     <Compile Include="Data\PropertyTests.cs" />
     <Compile Include="Data\TaxContextTests.cs" />
+    <Compile Include="Data\TaxPayerRepositoryTests.cs" />
     <Compile Include="Data\TaxPayerTests.cs" />
     <Compile Include="Data\TaxRecordTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
